# guile-lib

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  dev-environ  dev-environ.in  pre-inst-env.in
am/: guile.mk
doc/: Makefile.am  docs.mk  guile-library.scm  make-texinfo.scm  release
doc/www/: base.css  template.scm
doc/www/dev/: index.scm
doc/www/news/: index.scm
examples/: Makefile.am
m4/: guile-ext.m4  guile.m4
meta/: guile-lib-1.0.pc.in
src/: Makefile.am  apicheck.scm  htmlprag.scm  match-bind.scm  md5.scm  statprof.scm  unit-test.scm
src/compat/: guile-2.scm
src/config/: load.scm
src/container/: async-queue.scm
src/debugging/: assert.scm
src/guile-lib/: compat-2.0.scm
src/math/: primes.scm
src/os/: process.scm
src/scheme/: documentation.scm  kwargs.scm
src/sxml/: ssax.scm
src/texinfo/: nodal-tree.scm  reflection.scm  serialize.scm
src/text/: parse-lalr.scm
unit-tests/: Makefile.am  api.scm  guile-library.api  md5.scm  statprof.scm  sxml.fold.scm  sxml.ssax.scm  texinfo.serialize.scm
